--- a/.github/workflows/basic2.yml
+++ b/.github/workflows/basic2.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build-2:
-    runs-on: [self-hosted, ManagedDevOps.Pool=tt-pool2]
+    runs-on: [self-hosted, ManagedDevOps.Pool=aym-managed-pool-github-1]
 
     steps:
       - uses: actions/checkout@v4
